--- a/public/publico.html
+++ b/public/publico.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
+
 </head>
 
 <!-- <body class="container"> -->
@@ -19,37 +20,42 @@
     <table>
         <tr>
             <td valign="middle" class="ticket-actual">
-                <span id="lblTicket1" class="ticket-actual-numero">Ticket W</span>
+                <span id="lblTicket1" class="ticket-actual-numero">Espere...</span>
                 <br>
-                <span id="lblEscritorio1" class="ticket-actual-escritorio">Escritorio W</span>
+                <span id="lblEscritorio1" class="ticket-actual-escritorio"></span>
             </td>
             <td>
                 <table>
                     <tr>
                         <td>
-                            <span id="lblTicket2" class="ticket-secundario">Ticket X</span>
+                            <span id="lblTicket2" class="ticket-secundario"></span>
                             <br>
-                            <span id="lblEscritorio2">Escritorio X</span>
+                            <span id="lblEscritorio2"></span>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <span id="lblTicket3" class="ticket-secundario">Ticket Y</span>
+                            <span id="lblTicket3" class="ticket-secundario"></span>
                             <br>
-                            <span id="lblEscritorio3">Escritorio Y</span>
+                            <span id="lblEscritorio3"></span>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <span id="lblTicket4" class="ticket-secundario">Ticket Z</span>
+                            <span id="lblTicket4" class="ticket-secundario"></span>
                             <br>
-                            <span id="lblEscritorio4">Escritorio Z</span>
+                            <span id="lblEscritorio4"></span>
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
     </table>
+
+    <script src="js/libs/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/socket.publico.js"></script>
+
 
 
 </body>
